codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exit_confirmation_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Quit Codex?
  You pressed Ctrl+C or Ctrl+D. Quitting will shut down the current session
  and exit Codex.

› 1. Yes, quit Codex           Shut down the current session and exit.
  2. Yes, and don't ask again  Quit now and skip this prompt next time.
  3. No, stay in Codex         Return to the current session.

  Press enter to confirm or esc to go back
