codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Codex server.


› [ ] JavaScript REPL      Enable a persistent Node-backed JavaScript REPL for
                           interactive website debugging and other inline
                           JavaScript execution capabilities.
  [x] Shell tool           Allow the model to run shell commands.
  [ ] Voice conversations  Talk with Codex using /voice.


  space toggle · enter save · esc save/close
