codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup_from_registry.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Experimental features
  Toggle experimental features. Changes are saved to config.toml.

› [ ] JavaScript REPL              Enable a persistent Node-backed JavaScript REPL for interactive website debugging
                                   and other inline JavaScript execution capabilities. Requires Node >= v22.22.0
                                   installed.
  [ ] Memories                     Allow Codex to create new memories from conversations and bring relevant memories
                                   into new conversations.
  [ ] Hooks                        Run deterministic scripts during the Codex lifecycle
  [ ] External migration           Show a startup prompt when Codex detects migratable external agent config for this
                                   machine or project.
  [ ] Auto-review                  When Codex needs approval for higher-risk actions (e.g. sandbox escapes or blocked
                                   network access), route eligible approval requests to a carefully-prompted security
                                   reviewer subagent rather than blocking the agent on your input. This can consume
                                   significantly more tokens because it runs a subagent on every approval request.
  [ ] Prevent sleep while running  Keep your computer awake while Codex is running a thread.

  Press space to select or enter to save for next conversation
